# email_newsletter

./: Cargo.toml
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
