[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Renato Diniz <renatodinizc@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11.24"
